--- a/frontend/index.html
+++ b/frontend/index.html
@@ -6,14 +6,20 @@
     <title>GSF Tracker</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <meta name="description" content="Organize your GSF challenge where group members can only use items found collectively. 
-    Track needs, share finds, and coordinate your group's progression." />
+    <meta
+      name="description"
+      content="Organize your GSF challenge where group members can only use items found collectively. 
+    Track needs, share finds, and coordinate your group's progression."
+    />
     <meta name="author" content="D2Gambit" />
-    <meta name="robots" content="index, follow">
-    
+    <meta name="robots" content="index, follow" />
+
     <meta property="og:title" content="Group Self Found Tracker" />
-    <meta property="og:description" content="Organize your GSF challenge where group members can only use items found collectively. 
-    Track needs, share finds, and coordinate your group's progression." />
+    <meta
+      property="og:description"
+      content="Organize your GSF challenge where group members can only use items found collectively. 
+    Track needs, share finds, and coordinate your group's progression."
+    />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="https://meku.dev/images/meku.png" />
 
