Change meta image for html link to a relevant one, D2 themed

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -21,11 +21,10 @@
     Track needs, share finds, and coordinate your group's progression."
     />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://meku.dev/images/meku.png" />
-
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@meku_dev" />
-    <meta name="twitter:image" content="https://meku.dev/images/meku.png" />
+    <meta
+      property="og:image"
+      content="https://www.gsftracker.com/gsf-tracker-meta.png"
+    />
   </head>
   <body>
     <div id="root"></div>
